force-app/main/default/objects/Disputed_Item__c/Disputed_Item__c.object-meta.xml
<CustomObject>
    <description>Used to disputed items  in a dispute case</description>
    <label>Disputed Item</label>
    <nameField>
        <displayFormat>DI-{0000000000}</displayFormat>
        <label>Disputed Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disputed Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>