force-app/main/default/objects/Disputed_Item__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjustment</label>
    <referenceTo>Adjustment__c</referenceTo>
    <relationshipLabel>Disputed Items</relationshipLabel>
    <relationshipName>Disputed_Items</relationshipName>
    <type>Lookup</type>
</CustomField>