force-app/main/default/objects/Disputed_Item__c/fields/AP_Profit_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>AP_Profit_Centre_Code__c</fullName>
    <label>AP Profit Centre Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>