force-app/main/default/objects/Disputed_Item__c/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <description>Used in StarTrack reporting</description>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>