force-app/main/default/objects/Disputed_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Disputed Items</relationshipLabel>
    <relationshipName>Disputed_Items</relationshipName>
    <type>Lookup</type>
</CustomField>