force-app/main/default/objects/Disputed_Item__c/fields/Connote__c.field-meta.xml
<CustomField>
    <fullName>Connote__c</fullName>
    <label>Connote #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>