force-app/main/default/objects/Disputed_Item__c/fields/Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Approval</label>
    <referenceTo>Credit_Approval__c</referenceTo>
    <relationshipLabel>Disputed Items</relationshipLabel>
    <relationshipName>Disputed_Items</relationshipName>
    <type>Lookup</type>
</CustomField>