force-app/main/default/objects/Disputed_Item__c/fields/DisputeCurrency__c.field-meta.xml
<CustomField>
    <fullName>DisputeCurrency__c</fullName>
    <defaultValue>&quot;AUD&quot;</defaultValue>
    <description>The currency which the Customer organization in concern is dealing with.</description>
    <inlineHelpText>The currency which the Customer organization in concern is dealing with.</inlineHelpText>
    <label>Dispute Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
                <default>true</default>
                <label>AUD</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>