force-app/main/default/objects/Disputed_Item__c/fields/Disputed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Reason__c</fullName>
    <description>The reason the customer is disputing the charge.</description>
    <inlineHelpText>Reason provided by the customer</inlineHelpText>
    <label>Disputed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity Incorrect</fullName>
            </value>
            <value>
                <fullName>Incorrect Charge</fullName>
            </value>
            <value>
                <fullName>Incorrect Weight</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Duplicate Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>