force-app/main/default/objects/Disputed_Item__c/fields/DisputedItemSFRef__c.field-meta.xml
<CustomField>
    <fullName>DisputedItemSFRef__c</fullName>
    <externalId>true</externalId>
    <label>Disputed Item SF Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>