force-app/main/default/objects/Disputed_Item__c/fields/Is_APPC__c.field-meta.xml
<CustomField>
    <fullName>Is_APPC__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Is APPC</label>
	<description>Is this related to an APPC product?</description>
	<inlineHelpText>Is this related to an APPC product?</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>