force-app/main/default/objects/Disputed_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcels</fullName>
            </value>
            <value>
                <fullName>Letters</fullName>
            </value>
            <value>
                <fullName>Trusted Services</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Business Credit Account Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>