force-app/main/default/objects/Disputed_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>The product code of the product</description>
    <label>Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>