force-app/main/default/objects/Disputed_Item__c/fields/Product_Desciption__c.field-meta.xml
<CustomField>
    <fullName>Product_Desciption__c</fullName>
    <description>Description of the product that the customer is disputing.</description>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>