force-app/main/default/objects/Disputed_Item__c/fields/Proposed_Credit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The proposed credit to the customer. Populated by the individual investigating the claim</description>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>