force-app/main/default/objects/Disputed_Item__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BML - Overcharged</fullName>
            </value>
            <value>
                <fullName>BML - Undercharged</fullName>
            </value>
            <value>
                <fullName>BML - Wrong Account</fullName>
            </value>
            <value>
                <fullName>eLMS Mailing Statement</fullName>
            </value>
            <value>
                <fullName>Operator Error</fullName>
            </value>
            <value>
                <fullName>Contract Expired - Charged Full Rate</fullName>
            </value>
            <value>
                <fullName>Incorrect Product Data Provided</fullName>
            </value>
            <value>
                <fullName>Un-manifested Fee Refund</fullName>
            </value>
            <value>
                <fullName>Manifest Not Posted</fullName>
            </value>
            <value>
                <fullName>Minimum Value - Shortfall Fee</fullName>
            </value>
            <value>
                <fullName>Delivery Error</fullName>
            </value>
            <value>
                <fullName>No Proof Of Delivery</fullName>
            </value>
            <value>
                <fullName>Early Payment Rebate</fullName>
            </value>
            <value>
                <fullName>Rebate Not Applied</fullName>
            </value>
            <value>
                <fullName>Product Return (Customer)</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Customer Claim Met</fullName>
            </value>
            <value>
                <fullName>Fee Refund Applied</fullName>
            </value>
            <value>
                <fullName>Additional Charges</fullName>
            </value>
            <value>
                <fullName>Annual Price Review Rollback</fullName>
            </value>
            <value>
                <fullName>Despatch ID Error</fullName>
            </value>
            <value>
                <fullName>Product Return (Commercial)</fullName>
            </value>
            <value>
                <fullName>Cubic Negotiated Settlement</fullName>
            </value>
            <value>
                <fullName>Incorrect service</fullName>
            </value>
            <value>
                <fullName>Consignment note Transfer</fullName>
            </value>
            <value>
                <fullName>Unable to supply consignment note copy</fullName>
            </value>
            <value>
                <fullName>CWC Recovery</fullName>
            </value>
            <value>
                <fullName>Duplicate Cash Receipts</fullName>
            </value>
            <value>
                <fullName>Small Debt Write Off</fullName>
            </value>
            <value>
                <fullName>Incorrect Handrate / Missed Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>