force-app/main/default/objects/Disputed_Item__c/fields/Reason_Category__c.field-meta.xml
<CustomField>
    <fullName>Reason_Category__c</fullName>
    <description>Used to capture the reason identified as the justification for the credit to the customer.</description>
    <label>Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting adjustment</fullName>
            </value>
            <value>
                <fullName>Billing Processing error</fullName>
            </value>
            <value>
                <fullName>Bulk Mail Lodgement (BML)</fullName>
            </value>
            <value>
                <fullName>Customer Data Issue</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Discretionary Settlement</fullName>
            </value>
            <value>
                <fullName>Order Processing Error</fullName>
            </value>
            <value>
                <fullName>Write off</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Manual Handling Surcharge</fullName>
            </value>
            <value>
                <fullName>Security surcharge</fullName>
            </value>
            <value>
                <fullName>International Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>