force-app/main/default/objects/Disputed_Item__c/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>