force-app/main/default/objects/Disputed_Item__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <formula>Text(Case__r.Account.Sales_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>