force-app/main/default/objects/Disputed_Item__c/fields/SAP_TGT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SAP_TGT_Quantity__c</fullName>
    <description>Required field for &quot;SAP Daily Extract&quot; report. 
Default value &quot;1&quot;</description>
    <formula>&quot;1&quot;</formula>
    <label>SAP TGT Quantity</label>
    <type>Text</type>
</CustomField>