force-app/main/default/objects/Disputed_Item__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>The date the transation took place</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>