force-app/main/default/objects/Disputed_Item__c/fields/ST_Destination__c.field-meta.xml
<CustomField>
    <fullName>ST_Destination__c</fullName>
    <label>ST Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>