force-app/main/default/objects/Disputed_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>New = Currently under investigation 

Verified Claim = Customer has provided enough evidence to support claim

Invalid Claim = Customer has not provided enough information to support claim

Rejected = Customers claim does not meet criteria</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Verified Claim</fullName>
            </value>
            <value>
                <fullName>Invalid Claim</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
                <isActive>false</isActive>
                <label>Submitted For Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>