force-app/main/default/objects/Disputed_Item__c/fields/SupportingDocumentDownloadURL__c.field-meta.xml
<CustomField>
    <fullName>SupportingDocumentDownloadURL__c</fullName>
    <description>Public URL to download supporting documents related to the disputed item.</description>
    <inlineHelpText>Public URL to download supporting documents related to the disputed item.</inlineHelpText>
    <label>Supporting Document Download URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>