force-app/main/default/objects/Disputed_Item__c/fields/Team_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Reason_Code__c</fullName>
    <description>Code generated by the reason code.</description>
    <label>TEAM Reason Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>