force-app/main/default/objects/Disputed_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Pick list to distinguish whether the credit is discretionary or not</description>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Discretionary</fullName>
            </value>
            <value>
                <fullName>Discretionary Credit</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
                <isActive>false</isActive>
                <label>Adjustment</label>
            </value>
            <value>
                <fullName>Ex Gratia</fullName>
                <isActive>false</isActive>
                <label>Ex Gratia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>