force-app/main/default/objects/Disputed_Item__c/recordTypes/Default_Disputed_Item_ERP.recordType-meta.xml
<RecordType>
    <fullName>Default_Disputed_Item_ERP</fullName>
    <active>true</active>
    <description>Default Record Type for Disputed Items with No ERP</description>
    <label>Default Disputed Item ERP</label>
</RecordType>