force-app/main/default/objects/Disputed_Item__c/recordTypes/Peoplesoft_ERP.recordType-meta.xml
<RecordType>
    <fullName>Peoplesoft_ERP</fullName>
    <active>true</active>
    <description>Record Type for Peoplesoft ERP</description>
    <label>Peoplesoft ERP</label>
</RecordType>