force-app/main/default/objects/Disputed_Item__c/recordTypes/SAP_ERP.recordType-meta.xml
<RecordType>
    <fullName>SAP_ERP</fullName>
    <active>true</active>
    <description>Record Type for SAP ERP</description>
    <label>SAP ERP</label>
</RecordType>