force-app/main/default/objects/Disputed_Item__c/recordTypes/Team_ERP.recordType-meta.xml
<RecordType>
    <fullName>Team_ERP</fullName>
    <active>true</active>
    <description>Record Type for Team ERP</description>
    <label>Team ERP</label>
</RecordType>