force-app/main/default/objects/Disputed_Item__c/validationRules/Auspost_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Auspost_Mandatory_Fields</fullName>
    <active>true</active>
    <description>1.	If Status=”Verified” and ERP=”SAP ERP”, additional mandatory fields are:
a.	Product Code
b.	AP Profit Center
2.	If Status=”Verified” and ERP=”TEAM”, additional mandatory fields are:
ST Revenue Depot
ST Origin
ST Destination
Service Type
3.</description>
    <errorConditionFormula>AND (
				ISPICKVAL(Status__c ,&apos;Verified Claim&apos;), 
				Target_ERP__c = &apos;SAP ERP&apos;,
				OR(
  								ISBLANK( Product_Code__c ),
								ISBLANK( AP_Profit_Centre_Code__c  )
	
				   )
				)</errorConditionFormula>
    <errorMessage>Please review all mandatory fields &quot;Product Code and AP Profit Center&quot; to continue</errorMessage>
</ValidationRule>