force-app/main/default/objects/Disputed_Item__c/validationRules/Disputed_Item_No_Negative_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Disputed_Item_No_Negative_Amount</fullName>
    <active>true</active>
    <description>Amount fields can&apos;t be negative</description>
    <errorConditionFormula>Proposed_Credit__c&lt;0</errorConditionFormula>
    <errorDisplayField>Proposed_Credit__c</errorDisplayField>
    <errorMessage>You cannot propose a negative amount to credit.</errorMessage>
</ValidationRule>