force-app/main/default/objects/Disputed_Item__c/validationRules/Disputed_Item_No_Negative_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Disputed_Item_No_Negative_Quantity</fullName>
    <active>true</active>
    <description>You can not put a negative quantity value.</description>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>You can not have a negative quantity.</errorMessage>
</ValidationRule>