force-app/main/default/objects/Disputed_Item__c/validationRules/Disputed_Item_Status_RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>Disputed_Item_Status_RequiredFields</fullName>
    <active>true</active>
    <description>Enforces  a value must be allocated for Product Family and Credit Type when status is not &apos;New&apos;</description>
    <errorConditionFormula>IF ( 
AND ( 
NOT( ISPICKVAL( Status__c, &apos;New&apos;)), 
NOT(TEXT(Credit_Approval__r.Status__c) = &apos;Approved&apos;), 

OR( 
ISPICKVAL(Product__c, &apos;&apos;), 
ISPICKVAL(Product_Sub_Category__c, &apos;&apos;), 
ISPICKVAL(Type__c, &apos;&apos;) 
) 


), 

TRUE, FALSE 

)</errorConditionFormula>
    <errorMessage>Please check that Credit Type , Product Family and Sub product  are populated.</errorMessage>
</ValidationRule>