force-app/main/default/objects/Disputed_Item__c/validationRules/LPC_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>LPC_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR($UserRole.Name =&apos;Credit Team Lead&apos;, 
$UserRole.Name =&apos;Credit Officer&apos;), 
NOT(ISPICKVAL(Case__r.Enquiry_Type__c, &apos;Billing Dispute&apos;)), 
NOT(ISPICKVAL(Case__r.ReasonforCreditClaim__c, &apos;Late payment&apos;)) 
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify cases different from &apos;Late payment&apos; disputes</errorMessage>
</ValidationRule>