force-app/main/default/objects/Disputed_Item__c/validationRules/Reason_Required_If_Status_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required_If_Status_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				OR(
								ISPICKVAL(Status__c,&apos;Verified Claim&apos;) ,	
								ISPICKVAL(Status__c,&apos;Rejected&apos;)),
				
			ISBLANK(TEXT(Reason__c)))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please provide a reason when verifying or rejecting the claim.</errorMessage>
</ValidationRule>