force-app/main/default/objects/Disputed_Item__c/validationRules/Required_Fields_When_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_When_Rejected</fullName>
    <active>true</active>
    <description>Validation rule to ensure that all required information is captured when status = Rejected.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Status__c , &apos;Rejected&apos;) ,
				ISBLANK(RejectedReason__c))</errorConditionFormula>
    <errorDisplayField>RejectedReason__c</errorDisplayField>
    <errorMessage>You must provide a reason for rejecting the claim.</errorMessage>
</ValidationRule>