force-app/main/default/objects/Disputed_Item__c/validationRules/Resolution_Note_On_Verified_Claim.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Note_On_Verified_Claim</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL( Status__c ,&apos;Verified Claim&apos;) , 
				ISBLANK( Resolution_Code__c ))</errorConditionFormula>
    <errorDisplayField>Resolution_Code__c</errorDisplayField>
    <errorMessage>Please provide a resolution not when verifying the claim.</errorMessage>
</ValidationRule>