force-app/main/default/objects/Disputed_Item__c/validationRules/Restrict_NewDisputed_Items_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_NewDisputed_Items_Closed_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
ISPICKVAL(Case__r.Status ,&apos;Closed&apos;))</errorConditionFormula>
    <errorMessage>You can not add new disputed items to a closed case. Please create a new related case and add them there.</errorMessage>
</ValidationRule>