force-app/main/default/objects/Disputed_Item__c/validationRules/Startrack_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Startrack_Mandatory_Fields</fullName>
    <active>true</active>
    <description>1.	If Status=”Verified” and ERP=”SAP ERP”, additional mandatory fields are:
a.	Product Code
b.	AP Profit Center
2.	If Status=”Verified” and ERP=”TEAM”, additional mandatory fields are:
ST Revenue Depot
ST Origin
ST Destination
Service Type
3.</description>
    <errorConditionFormula>AND (
				ISPICKVAL(Status__c ,&apos;Verified Claim&apos;), 
				Target_ERP__c = &apos;TEAM&apos;,
				OR(
								ISBLANK( ST_Revenue_Depot__c ),
								ISBLANK( ST_Destination__c ),
								ISBLANK(ST_Origin__c),
				    ISBLANK(TEXT(Service_Type__c)) 		
								)
				
				)</errorConditionFormula>
    <errorMessage>Please review all mandatory fields &quot;ST Revenue Depot , ST Origin , ST Destination and Service Type&quot; to continue</errorMessage>
</ValidationRule>