force-app/main/default/objects/Disputed_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>