force-app/main/default/objects/Disputed_Item__c/listViews/Australia_Post_LPC_Queue_Disputed_Item.listView-meta.xml
<ListView>
    <fullName>Australia_Post_LPC_Queue_Disputed_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>Australia Post LPC Queue</label>
    <queue>Australia_Post_LPC_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>